--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
@@ -21,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.0",
+    "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
