--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.4",
+    "@heroicons/vue": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
