--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+aiosmtplib==1.1.7
 anyio==3.6.2
 bcrypt==4.0.1
+blinker==1.5
 boto3==1.26.17
 botocore==1.29.17
 click==8.1.3
@@ -7,10 +9,13 @@ dnspython==2.2.1
 ecdsa==0.18.0
 email-validator==1.3.0
 fastapi==0.88.0
+fastapi-mail==1.2.2
 greenlet==2.0.1
 h11==0.14.0
 idna==3.4
+Jinja2==3.1.2
 jmespath==1.0.1
+MarkupSafe==2.1.1
 passlib==1.7.4
 Pillow==9.3.0
 psycopg2-binary==2.9.5
@@ -25,7 +30,7 @@ s3transfer==0.6.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.44
-starlette==0.22.0
+starlette==0.21.0
 typing_extensions==4.4.0
 urllib3==1.26.13
 uvicorn==0.20.0
