Updated env and nginx configs for app to use in Docker with TLS

--- a/nginx/config.json
+++ b/nginx/config.json
@@ -5,7 +5,10 @@
             "pass": "routes"
         },
         "*:443": {
-            "pass": "routes"
+            "pass": "routes",
+            "tls": {
+                "certificate": "bundle"
+            }
         }
     },
     "routes": [
