--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+aiosmtplib==2.0.2
 aiosqlite==0.17.0
+annotated-types==0.5.0
 anyio==3.6.1
 apturl==0.5.2
 arrow==1.2.3
@@ -8,7 +10,7 @@ attrs==19.3.0
 bcrypt==3.1.7
 beautifulsoup4==4.8.2
 binaryornot==0.4.4
-blinker==1.4
+blinker==1.6.2
 boto3==1.24.60
 botocore==1.27.60
 Brlapi==0.7.0
@@ -31,19 +33,20 @@ dbus-python==1.2.16
 defer==1.0.6
 distro==1.4.0
 distro-info===0.23ubuntu1
-dnspython==1.16.0
+dnspython==2.4.1
 docker==4.1.0
 docker-compose==1.25.0
 dockerpty==0.4.1
 docopt==0.6.2
 duplicity==0.8.12.0
 ecdsa==0.18.0
-email-validator==1.3.0
+email-validator==2.0.0.post2
 emails==0.6
 entrypoints==0.3
 evdev==1.3.0
 fastapi==0.79.1
 fastapi-jwt-auth==0.5.0
+fastapi-mail==1.4.1
 fasteners==0.14.1
 fireo==1.5.1
 folder-color-common==0.0.88
@@ -106,7 +109,9 @@ pyasn1-modules==0.2.8
 pycairo==1.16.2
 pycrypto==2.6.1
 pycups==1.9.73
-pydantic==1.9.2
+pydantic==2.1.1
+pydantic-core==2.4.0
+pydantic-settings==2.0.2
 PyGObject==3.36.0
 PyJWT==1.7.1
 pymacaroons==0.13.0
@@ -118,8 +123,9 @@ pyrsistent==0.15.5
 python-apt===2.0.0-ubuntu0.20.04.7-zorin1
 python-dateutil==2.7.3
 python-debian===0.1.36ubuntu1
-python-dotenv==0.20.0
+python-dotenv==1.0.0
 python-jose==3.3.0
+python-magic==0.4.16
 python-multipart==0.0.5
 python-resize-image==1.1.20
 python-slugify==8.0.1
@@ -145,7 +151,7 @@ sqlalchemy-orm==1.2.5
 sqlalchemy2-stubs==0.0.2a35
 sqlmodel==0.0.8
 ssh-import-id==5.10
-starlette==0.19.1
+starlette==0.31.0
 stravalib==1.2.0
 text-unidecode==1.3
 texttable==1.6.2
