--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.0",
     "pinia": "^2.0.27",
     "vue": "^3.2.45",
+    "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
@@ -36,7 +37,7 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.4",
     "typescript": "~4.7.4",
-    "vite": "^3.2.4",
+    "vite": "^3.2.7",
     "vue-tsc": "^1.0.9"
   }
 }
