--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,13 @@ annotated-types==0.5.0
 anyio==3.7.1
 boto3==1.28.30
 botocore==1.31.30
+click==8.1.7
 ecdsa==0.18.0
 exceptiongroup==1.1.3
 fastapi==0.101.1
 greenlet==2.0.2
+h11==0.14.0
+httptools==0.6.0
 idna==3.4
 jmespath==1.0.1
 jose==1.0.0
@@ -16,6 +19,7 @@ pydantic_core==2.6.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-jose==3.3.0
+PyYAML==6.0.1
 rsa==4.9
 s3transfer==0.6.2
 shortuuid==1.0.11
@@ -27,3 +31,7 @@ sqlmodel==0.0.8
 starlette==0.27.0
 typing_extensions==4.7.1
 urllib3==1.26.16
+uvicorn==0.23.2
+uvloop==0.17.0
+watchfiles==0.19.0
+websockets==11.0.3
