--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.5.0
 anyio==3.7.1
+bcrypt==4.0.1
 boto3==1.28.30
 botocore==1.31.30
+cached-property==1.5.2
 click==8.1.7
 ecdsa==0.18.0
 exceptiongroup==1.1.3
@@ -10,15 +12,20 @@ greenlet==2.0.2
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
+inflection==0.5.1
 jmespath==1.0.1
 jose==1.0.0
+mypy-extensions==1.0.0
+passlib==1.7.4
 Pillow==10.0.0
+psycopg2-binary==2.9.5
 pyasn1==0.5.0
 pydantic==1.10.12
 pydantic_core==2.6.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-jose==3.3.0
+python-multipart==0.0.6
 PyYAML==6.0.1
 rsa==4.9
 s3transfer==0.6.2
@@ -26,9 +33,11 @@ shortuuid==1.0.11
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.41
+sqlalchemy-orm==1.2.5
 sqlalchemy2-stubs==0.0.2a35
 sqlmodel==0.0.8
 starlette==0.27.0
+typing-inspect==0.9.0
 typing_extensions==4.7.1
 urllib3==1.26.16
 uvicorn==0.23.2
