--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_APP_DOMAIN='https://emwiautomoto.sebtota.com'
+VITE_APP_DOMAIN='https://emwiautomotoapi.sebtota.com'
 VITE_APP_NAME='EMWI Auto Moto'
