--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -120,6 +120,7 @@ shortuuid==1.0.11
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
+SQLAlchemy==2.0.28
 stack-data==0.6.3
 starlette==0.27.0
 terminado==0.18.0
@@ -127,7 +128,6 @@ tinycss2==1.2.1
 tomli==2.0.1
 tomlkit==0.12.3
 tornado==6.4
-tortoise-orm==0.20.0
 traitlets==5.14.0
 types-python-dateutil==2.8.19.14
 typing-inspect==0.9.0
