--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.9.1
 aiosignal==1.3.1
 aiosqlite==0.17.0
 annotated-types==0.5.0
+anthropic==0.34.2
 anyio==3.7.1
 appnope==0.1.3
 argon2-cffi==23.1.0
