--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-backend/.env
+.env
 config.ini
 config.yaml
 bundle.pem
@@ -126,7 +126,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-backend/.env
+.env
 .venv
 env/
 venv/
